--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+.regular:hover
+{
+    visibility: hidden;
+}
 
 body
 {
@@ -25,7 +29,7 @@ body
 
 @font-face {
     font-family: "CarlonAntique";
-    src: url("./assets/CaslonAntique.ttf");
+    src: url("../assets/CaslonAntique.ttf");
 }
 
 #QueueContainer span
@@ -34,8 +38,54 @@ body
     position: fixed;
     font-size: 28pt;
     font-family: "CarlonAntique";
-    top: 200px;
+    letter-spacing: 5px;
+    top: 218px;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
+}
+
+#top-buttons
+{
+    width: 160px;
+    height: 50px;
+    position: fixed;
+    top: 10px;
+    right: 20px;
+}
+
+#closeButton
+{
+    width: 60px;
+    height: 61px;;
+    background-image: url("../img/close.png");
+    position: absolute;
+    right:50px;
+    top: 60px;
+}
+
+#closeButton:hover
+{
+    background-image: url("../img/close-glow.png");
+}
+
+#cancelButton
+{
+    width: 348px;
+    height: 50px;;
+    background-image: url("../img/cancel.png");
+    position: absolute;
+    left: 50%;
+    margin-left: -174px;
+    bottom: 88px;
+}
+
+#cancelButton:hover
+{
+    background-image: url("../img/cancel-glow.png");
+}
+
+body:after{
+ display:none;
+ content: url("../img/close-glow.png") url("../img/cancel-glow.png");
 }
